# stinger

./: client.sh  live-batch0.txt  liveJournal-in.txt  server.sh  temp.txt
lib/: CMakeLists.txt
lib/stinger_core/inc/: stinger_batch_insert.h
lib/stinger_utils/src/: csv.c
src/: CMakeLists.txt
src/clients/streams/: CMakeLists.txt
src/clients/streams/csv_stream/src/: main.cpp
src/server/: CMakeLists.txt
src/server/inc/: server.h
src/server/src/: batch_server.cpp  server.cpp
